<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

<!-- this is login Screen -->
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back2"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/back_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_margin="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/login_text1"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:hint="@string/login_text2"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/white"
                android:textColorHint="@android:color/white"
                app:endIconTint="@android:color/white"
                app:errorContentDescription="is Empty!"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <EditText
                    android:id="@+id/password_et_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:drawablePadding="10dp"
                    android:hint="@string/login_text4"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget_tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_text5"
                android:textColor="#FFC107"
                android:textSize="12sp" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/profile_btn"
                android:text="@string/login_text6"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/login_text7"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@android:color/white" />

            </LinearLayout>

            <ImageView
                android:id="@+id/email_iv_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/info_btn"
                android:padding="10dp"
                android:src="@drawable/ic_gmail3" />

            <TextView
                android:id="@+id/register_tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_text8"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <!-- this is Profile Screen -->
    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/sea_style" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImage_iv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_profile2" />

            <TextView
                android:id="@+id/userName_tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/email_tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>

        <Button
            android:id="@+id/logOut_btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/profile_btn2"
            android:text="@string/profile_text1"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</RelativeLayout>